<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mathlete</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_log">User Log</string>
    <string name="action_log_graph">User Log Graph</string>
    <string name="hello_world">Hello world!</string>
    <string name="dialog_about_body">Blah blah blah to fill in later</string>
    <string name="dialog_about_title">About Mathlete</string>

    <string name="pref_difficulty">pref_difficulty</string>
    <string name="pref_difficulty_title">Difficulty level</string>
    <string name="pref_difficulty_summary">Set level of difficulty</string>
    <string name="pref_difficulty_default">Easy</string>
    <string-array name="pref_difficulty_entries">
        <item>Easy</item>
        <item>Average</item>
        <item>Hard</item>
    </string-array>
    <string-array name="pref_difficulty_values">
        <item>Easy</item>
        <item>Average</item>
        <item>Hard</item>
    </string-array>    
    
    <string name="pref_college_stats">pref_collect_stats</string>
    <string name="pref_collect_stats_title">Log stats?</string>
    <string name="pref_collect_stats_summary">Record statistics to be displayed later.</string>
    <string name="pref_reset_stats_title">Reset stats?</string>
    <string name="pref_reset_stats_summary">Clear all stored exercise stats.</string>
    <string name="pref_reset_stats_dialog_message">You will erase all saved data! Are you sure?</string>    
    <string name="pref_reset_stats_positive_button_msg">Erase</string>    
    <string name="pref_reset_stats_negative_button_msg">Cancel</string>    
    
    <string name="pref_webpage_title">Mathlete Homepage</string>
    <string name="pref_webpage_summary">Check us out online!</string>
    
    <string name="homepage_url">http://www.dylam.me</string>
</resources>