<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<ListPreference 
	    android:key="pref_difficulty"
	    android:title="@string/pref_difficulty_title"
	    android:summary="@string/pref_difficulty_summary"
	    android:entries="@array/pref_difficulty_entries"
        android:entryValues="@array/pref_difficulty_entries"
        android:defaultValue="@string/pref_difficulty_default"
	    />
	<CheckBoxPreference 
	    android:key="pref_collect_stats"
	    android:title="@string/pref_collect_stats_title"
	    android:summary="@string/pref_collect_stats_summary"
	    android:defaultValue="true"/>
	<PreferenceScreen
	    android:title="@string/pref_webpage_title"
	    android:summary="@string/pref_webpage_summary">
	    	<intent
	    	    android:action="android.intent.action.VIEW"
	    	    android:data="@string/homepage_url"/> 
	</PreferenceScreen>
</PreferenceScreen>
